change of home page appearance

--- a/App/Views/Home/index.html
+++ b/App/Views/Home/index.html
@@ -20,26 +20,9 @@
 {% else %}
 <main>
   <section class="container-fluid mt-4">
-    <div class="row justify-content-evenly">
-      <div class="mt-3 col-5 col-xl-5 order-2 order-md-1 border rounded-3 wiersz">
-        <span class="tytul  fs-2">Skąpy</span>
-        <p class="tresc">
-          Chciał się skąpy obwiesić, że talara stracił.<br>
-          Żeby jednak za powróz dwóch groszy nie spłacił,<br>
-          Ukradł go po kryjomu. Postrzegli sąsiedzi.<br>
-          Kiedy więc, osądzony na śmierć, w jamie siedzi,<br>
-          Rzekł, gdy jedni żałują, a drudzy go cieszą:<br>
-          «To szczęście, że mnie przecież bez kosztu powieszą». <br>
-        </p>
-        <span class="autor">Ignacy Krasicki</span>
-				<!-- <span class="tytul  fs-2">Maxims</span> -->
-        <!-- <p class="tresc"> -->
-          <!-- Avarice is more opposed to economy than to liberality.<br> -->
-        <!-- </p> -->
-        <!-- <span class="autor">François de La Rochefoucauld </span> -->
-      </div>
+    <div class="row justify-content-center">
 
-      <div class="col-9 col-sm-8 col-md-5 order-1 order-md-2 border rounded-3">
+      <div class="col-12 col-md-9  col-lg-7 order-1 order-md-2 mt-5 mx-1 border rounded-3">
         <div class="text-center fs-1">
           <span class="tytul">Register now!</span>
         </div>
@@ -70,8 +53,21 @@
 
     </div>
 
-    <div class="row my-3 my-md-5 justify-content-center">
-      <div class="col-4 border rounded-3 wiersz">
+    <div class="row mb-3 my-3 justify-content-center">
+      <div class="mx-1 mx-lg-2 border rounded-3 wiersz">
+        <span class="tytul  fs-2">Skąpy</span>
+        <p class="tresc">
+          Chciał się skąpy obwiesić, że talara stracił.<br>
+          Żeby jednak za powróz dwóch groszy nie spłacił,<br>
+          Ukradł go po kryjomu. Postrzegli sąsiedzi.<br>
+          Kiedy więc, osądzony na śmierć, w jamie siedzi,<br>
+          Rzekł, gdy jedni żałują, a drudzy go cieszą:<br>
+          «To szczęście, że mnie przecież bez kosztu powieszą». <br>
+        </p>
+        <span class="autor">Ignacy Krasicki</span>
+      </div>
+
+      <div class="mx-1 mx-lg-2 my-3 border rounded-3 wiersz">
         <span class="tytul  fs-2">Talar i czerwony złoty</span>
         <p class="tresc">
           Talar, zwierzchnią postacią swoją okazały,<br>
@@ -81,6 +77,7 @@
         </p>
         <span class="autor">Ignacy Krasicki</span>
       </div>
+
     </div>
   </section>
 </main>
