--- a/public/css/base_styles.css
+++ b/public/css/base_styles.css
@@ -61,6 +61,12 @@ html {
   padding: 10px;
 }
 
+@media screen and (min-width: 768px) and (max-width:991px) {
+  p.tresc {
+    font-size: 0.88rem;
+  }
+}
+
 .autor,
 .tytul,
 .logo {
