--- a/App/Views/Password/forgot.html
+++ b/App/Views/Password/forgot.html
@@ -14,8 +14,7 @@
         <form class="container-fluid p-0 p-sm-3" action="/password/request-reset" method="post">
           <div class="mb-1">
             <label for="inputEmail">Email</label>
-            <input type="email" class="form-control" id="inputEmail" name="email"
-              value="{% if user %}{{ user.email }}{%else%}tomek.kedziorek@gmail.com{%endif%}">
+            <input type="email" class="form-control" id="inputEmail" name="email" value="{{ user.email }}">
           </div>
 
           <div class="d-flex justify-content-center mt-3" id="register_button">
