--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -26,11 +26,18 @@ li>.nav-link.active {
   border-bottom-color: rgb(12, 26, 56) !important;
 }
 
+.modal-body div {
+  font-size: 1rem !important;
+}
 
 button.edit,
 .save,
 .delete,
-#add {
+.limit,
+#add,
+.deleteLimit,
+.saveLimit,
+.addLimit {
   border: 1px solid white;
   color: white;
   border-radius: 0.3rem;
@@ -45,7 +52,11 @@ button.edit,
 button.edit:hover:enabled,
 .save:hover:enabled,
 .delete:hover:enabled,
-#add:hover:enabled {
+.limit:hover:enabled,
+#add:hover:enabled,
+.deleteLimit:hover:enabled,
+.saveLimit:hover:enabled,
+.addLimit:hover:enabled {
   border-color: #0c66af;
   box-shadow: 0.0em 0.0em 0.5em 0.2em #0c66af;
 }
